# justmd

./: README.md  README_CN.md  README_EN.md  index.html  package.json  pnpm-lock.yaml  requirements.md
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CustomMenu.tsx  Editor.tsx  ModeSwitch.tsx  Preview.tsx  StatusBar.tsx  ThemeToggle.tsx  WindowControls.tsx
src/hooks/: useAutoSave.ts
src/lib/: markdown.tsx  storage.ts  utils.ts
